tests/snapshots/golden_snapshot_tests__golden_envelope_hello_passthrough.snap
---
source: tests/golden_snapshot_tests.rs
expression: env
---
{
  "t": "hello",
  "contract_version": "abp/v0.1",
  "backend": {
    "id": "sidecar:claude",
    "backend_version": null,
    "adapter_version": null
  },
  "capabilities": {},
  "mode": "passthrough"
}
