tests/snapshots/golden_snapshot_tests__golden_error_category_display.snap
---
source: tests/golden_snapshot_tests.rs
expression: display
---
[
    "protocol",
    "backend",
    "capability",
    "policy",
    "workspace",
    "ir",
    "receipt",
    "dialect",
    "config",
    "internal",
]
