tests/snapshots/golden_snapshot_tests__golden_error_code_display_all.snap
---
source: tests/golden_snapshot_tests.rs
expression: display
---
[
    "PROTOCOL_INVALID_ENVELOPE",
    "PROTOCOL_UNEXPECTED_MESSAGE",
    "PROTOCOL_VERSION_MISMATCH",
    "BACKEND_NOT_FOUND",
    "BACKEND_TIMEOUT",
    "BACKEND_CRASHED",
    "CAPABILITY_UNSUPPORTED",
    "CAPABILITY_EMULATION_FAILED",
    "POLICY_DENIED",
    "POLICY_INVALID",
    "WORKSPACE_INIT_FAILED",
    "WORKSPACE_STAGING_FAILED",
    "IR_LOWERING_FAILED",
    "IR_INVALID",
    "RECEIPT_HASH_MISMATCH",
    "RECEIPT_CHAIN_BROKEN",
    "DIALECT_UNKNOWN",
    "DIALECT_MAPPING_FAILED",
    "CONFIG_INVALID",
    "INTERNAL",
]
