tests/snapshots/golden_snapshot_tests__golden_event_assistant_delta.snap
---
source: tests/golden_snapshot_tests.rs
expression: e
---
{
  "ts": "2025-01-15T12:00:00Z",
  "type": "assistant_delta",
  "text": "Hello"
}
