tests/snapshots/golden_snapshot_tests__golden_event_assistant_message.snap
---
source: tests/golden_snapshot_tests.rs
expression: e
---
{
  "ts": "2025-01-15T12:00:00Z",
  "type": "assistant_message",
  "text": "I'll fix the login bug by updating the authentication handler."
}
