tests/snapshots/golden_snapshot_tests__golden_event_command_executed.snap
---
source: tests/golden_snapshot_tests.rs
expression: e
---
{
  "ts": "2025-01-15T12:00:00Z",
  "type": "command_executed",
  "command": "cargo test --release",
  "exit_code": 0,
  "output_preview": "test result: ok. 42 passed"
}
