tests/snapshots/golden_snapshot_tests__golden_event_command_executed_no_exit_code.snap
---
source: tests/golden_snapshot_tests.rs
expression: e
---
{
  "ts": "2025-01-15T12:00:00Z",
  "type": "command_executed",
  "command": "cargo build",
  "exit_code": null,
  "output_preview": null
}
