tests/snapshots/golden_snapshot_tests__golden_event_error_with_code.snap
---
source: tests/golden_snapshot_tests.rs
expression: e
---
{
  "ts": "2025-01-15T12:00:00Z",
  "type": "error",
  "message": "Backend timed out",
  "error_code": "backend_timeout"
}
