tests/snapshots/golden_snapshot_tests__golden_event_error_without_code.snap
---
source: tests/golden_snapshot_tests.rs
expression: e
---
{
  "ts": "2025-01-15T12:00:00Z",
  "type": "error",
  "message": "Failed to read file"
}
