tests/snapshots/golden_snapshot_tests__golden_event_file_changed.snap
---
source: tests/golden_snapshot_tests.rs
expression: e
---
{
  "ts": "2025-01-15T12:00:00Z",
  "type": "file_changed",
  "path": "src/auth.rs",
  "summary": "Added JWT validation function"
}
